// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TextLink /> > should allow as override 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <p
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_p__4z7xt3e reset_trimmedElement__4z7xt30 TextLink_root__5ax1bk0"
    data-od-component="textlink"
    rel="nooperner noreferrer"
  >
    <span
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_pointerEvents_none__onxwju2u sprinkles_position_relative_mobile__onxwju8v reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_fontSize_4__onxwju21 sprinkles_lineHeight_4__onxwju2a sprinkles_fontWeight_semiBold__onxwju2h sprinkles_color_link__onxwju6k typography_typographyStyles__yhjp330"
    >
      Test
    </span>
  </p>
</div>
`;

exports[`<TextLink /> > should match the snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <a
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_a__4z7xt316 reset__4z7xt32 focusOutline_focusOutlineStyle__tq83zq0 TextLink_root__5ax1bk0"
    data-od-component="textlink"
    rel="nooperner noreferrer"
  >
    <span
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_pointerEvents_none__onxwju2u sprinkles_position_relative_mobile__onxwju8v reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_fontSize_4__onxwju21 sprinkles_lineHeight_4__onxwju2a sprinkles_fontWeight_semiBold__onxwju2h sprinkles_color_link__onxwju6k typography_typographyStyles__yhjp330"
    />
  </a>
</div>
`;
